# MatrixCompressor

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  matrix_compressor_benchmark.cpp
cmake/: matrix_compressor-config.cmake.in
examples/: CMakeLists.txt  matrix_compressor_example.cpp
matrix_compressor/: matrix_compressor.h
sources/: matrix_compressor.cpp
tests/: CMakeLists.txt  matrix_compressor_test.cpp
